feat: downloading of client files dynamically, compiler finished